# Tadas_Butkus_reprice_proj

./: ReadMe.md  auto.py  daily_adjustments.json  download_all_products_buy_box_price.py  main.py  main_for_restocking.py  products_buy_box_price_10_1_2025.csv  products_buy_box_price_11_1_2025.csv  products_buy_box_price_12_1_2025.csv  products_buy_box_price_17_1_2025.csv  products_buy_box_price_1_11_2024.csv  products_buy_box_price_21_1_2025.csv  products_buy_box_price_22_3_2026.csv  products_buy_box_price_24_1_2025.csv  products_buy_box_price_27_12_2024.csv  products_buy_box_price_29_11_2024.csv  products_buy_box_price_30_11_2024.csv  products_buy_box_price_4_12_2024.csv  products_buy_box_price_5_12_2024.csv  products_buy_box_price_6_1_2025.csv  pyproject.toml  scheduler.py  work_with_sheet.py  work_with_sheet_for_restocking.py
